# C-Code

./: CMakeLists.txt  a.out  main  main.c
datatypes/: a.out  cliargs.c  datatypes.c  enum.c  enumchallenge.c  formats.c
looping/: a.out  anotherloop.c  inputloop.c  looping.c  whileloop.c
operators/: a.out  operators.c
testing/: a.out  testing.c
